# Splay-Trees

./: .gitignore  CMakeLists.txt
include/: SplayTree.h
src/main/: SplayTree.cpp
tests/: test.cpp
